# AlphaSolve

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  benchmark.py  install.bat  install.sh  log_to_html.py  main.py  problem.md  progress.html  pyproject.toml  solution.md  standard_solution.md  workflow.py
agents/: base_agent.py  common_agent_base.py  conjecture_graph.py  diff_refiner.py  lemma_pool.py  lemma_worker.py  no_history_refiner.py  orchestrator.py  pool_orchestrator.py  refiner.py  shared_context.py  solver.py  summarizer.py  utils.py  verifier.py  with_history_refiner.py
agents/lemmaworker/: __init__.py  citation_agent.py  extractor.py  generator.py  lemma_worker_context.py  reviser.py  revisor.py  verifier.py
config/: agent_config.py
docs/: LOGGING_SYSTEM.md
llms/: deepseek.py  exceptions.py  kimi.py  subagents.py  tools.py  utils.py  volcano_ds.py
log_as_html/: 20251231_133942_182.html
problems/: problem_1.md
prompts/: extractor.md  formatter.md  generator.md  generator_20250413.md  generator_20260414.md  no_history_refiner.md  refiner.md  reviser.md  solver.md  summarizer.md  verifier.md
tests/: analyze_issue.py  debug_wolfram.py  final_test.py  manual_mathkernel.py  manual_wolfram_session.py  test_agent_team.py  test_bug_investigation.py  test_dashboard_renderer.py  test_dependency.py  test_filesystem_agent_team.py  test_general_agent.py  test_kernel_raw.py  test_project_wolfram.py  test_search_and_replace.py  test_verifier_citation.py  test_worker_manager_status.py
utils/: __init__.py  log_session.py  logger.py  utils.py
(+93 files in other folders)
